--- a/index.html
+++ b/index.html
@@ -1,1 +1,5 @@
-hi
+<a href="/SubwaySF/">Subway Surfers: San Francisco</a>
+<a href="/SubwaySP/">Subway Surfers: Saint Petersburg </a>
+<a href="/FruitNinjaClassic/">Fruit Ninja Classic (2D)</a>
+<a href="/FruitNinja/">Fruit Ninja </a>
+<a href="/CutTheRope/">Cut The Rope</a>
