--- a/index.html
+++ b/index.html
@@ -3,4 +3,4 @@
 <a href="/FruitNinjaClassic/">Fruit Ninja Classic (2D)</a>
 <a href="/FruitNinja/">Fruit Ninja </a>
 <a href="/CutTheRope/">Cut The Rope </a>
-<a href="/JetpackJoyride/">Jetpack Joyride </a>
+<a href="/JetpackJoyride/">Jetpack Joyride </a><a href="/Eag1.8.html">Eaglercraft</a>
